--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>  
-    <h1 class=" border border-success bg-light mu-3 my-3 md-3 mr-5 ml-5 display-1 text-success row align-items-center justify-content-center font-weight-bold ">WELCOME</h1>
-  <div id="carouselExampleCaptions" class=" border border-dark carousel slide .carousel-fade" data-ride="carousel">
+    <h5 class="mx-auto font-weight-bold display-3 row align-items-center justify-content-center">WELCOME</h5>
+  </div>  <div id="carouselExampleCaptions" class=" border border-dark carousel slide .carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -98,7 +98,7 @@
   </div>
   </div>
   <footer class=" bg-info blog-footer mx-auto row align-items-center justify-content-center">
-      <p class="font-weight-bold">Blog template built for friends by  
+      <p class="font-weight-bold">Blog built for friends by  
         <a class="font-italic text-white" href="https://www.facebook.com/profile.php?id=100006347145873"> Shivam Singh</a>
       </p>
   </footer>
