--- a/pre.html
+++ b/pre.html
@@ -206,10 +206,14 @@
             </div>
             <div class="container my-10">
                 <footer class="blog-footer mx-auto ">
-                    <p class="font-weight-bold">Blog template built for friends by <a class="font-italic" href="https://www.facebook.com/profile.php?id=100006347145873">Shivam Singh</a>
-                        <a class="border border-danger text-danger float-right row align-items-right justify-content-right" href="#">Back to top</a>
-
+                    <p class="font-weight-bold">Blog built for friends by
+                        <a class="font-italic" href="https://www.facebook.com/profile.php?id=100006347145873">Shivam
+                            Singh</a>
                     </p>
+                    <a class="font-weight-bold text-danger row align-items-left justify-content-left"
+                        href="#">Back to top</a>
+
+
                 </footer>
             </div>
             <!-- Optional JavaScript -->
