--- a/sai.html
+++ b/sai.html
@@ -44,7 +44,7 @@
 
     <div class="container my-5">
         <footer class="blog-footer mx-auto ">
-            <p class="font-weight-bold">Blog template built for friends by <a class="font-italic"
+            <p class="font-weight-bold">Blog built for friends by <a class="font-italic"
                     href="https://www.facebook.com/profile.php?id=100006347145873">Shivam Singh</a>
                 <a class=" border border-danger text-danger float-right row align-items-right justify-content-right" href="#">Back to top</a>
 
