--- a/clg.html
+++ b/clg.html
@@ -36,10 +36,10 @@
                     <img src="e4.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="e3.JPG" class="d-block w-100" alt="...">
+                    <img src="e3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="e5.JPG" class="d-block w-100" alt="...">
+                    <img src="e5.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="e6.jpg" class="d-block w-100" alt="...">
