--- a/eng.html
+++ b/eng.html
@@ -70,7 +70,7 @@
     </div>
     <div class="container my-5">
         <footer class="blog-footer mx-auto ">
-            <p class="font-weight-bold">Blog template built for friends by <a class="font-italic"
+            <p class="font-weight-bold">Blog built for friends by <a class="font-italic"
                     href="https://www.facebook.com/profile.php?id=100006347145873">Shivam Singh</a>
                     <a href="index.html">
                         <button type="button" class="border border-dark btn btn-success float-right">Back to Home</button>
