--- a/pre.html
+++ b/pre.html
@@ -149,8 +149,7 @@
             <div class="container my-5">
                 <div class="border border-warning row featurette">
                     <div class="col-md-7">
-                        <h1 class="featurette-heading">Most underrated Gems..<span class="text-muted">Venkatesh
-                                Sir</span>
+                        <h1 class="featurette-heading">Most underrated Gems..
                         </h1>
 
                         <p class="lead font-weight-normal">Teachers are some of the most unsung heroes we have. ...</p>
