--- a/award.html
+++ b/award.html
@@ -78,7 +78,7 @@
                     <img src="l.JPG" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="a.JPG" class="d-block w-100" alt="...">
+                    <img src="a.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
